--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -85,7 +85,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=NewsSystem
-main.class=newssystem.NewsSystem
+main.class=View.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
